force-app/main/default/objects/Grooming__c/Grooming__c.object-meta.xml
<CustomObject>
    <description>Make your Furry Pals feel fresh and clean!</description>
    <label>Grooming</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groomings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>