force-app/main/default/objects/Grooming__c/fields/Animal_Age__c.field-meta.xml
<CustomField>
    <fullName>Animal_Age__c</fullName>
    <label>Animal Age</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Animal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puppy (5-8 months old)</fullName>
            </value>
            <value>
                <fullName>Kitten (5-8 months old)</fullName>
            </value>
            <value>
                <fullName>Junior (1-2 years old)</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>