force-app/main/default/objects/Grooming__c/fields/DogVac__c.field-meta.xml
<CustomField>
    <fullName>DogVac__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DogVac</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Groomings</relationshipLabel>
    <relationshipName>Groomings</relationshipName>
    <type>Lookup</type>
</CustomField>