force-app/main/default/objects/Grooming__c/fields/Grooming_Cost__c.field-meta.xml
<CustomField>
    <fullName>Grooming_Cost__c</fullName>
    <defaultValue>35</defaultValue>
    <label>Grooming Cost</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>