force-app/main/default/objects/Grooming__c/fields/Vaccination_Check__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Check__c</fullName>
    <label>Vaccination Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>